fix section overflow

--- a/src/styles/common/layout.scss
+++ b/src/styles/common/layout.scss
@@ -111,7 +111,7 @@ body {
   @include section;
 
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 
   .sections &:last-child {
     flex-grow: 1;
